Fix Pagadian port | Cebu banner | Dipolog icon

--- a/index.html
+++ b/index.html
@@ -40,74 +40,74 @@
     <div class="stations">
         <ul class="list">
             <li>
-                <a href="pages/batac.html">
-                    <img class="st-icon" src="/images/dzrl.png" />
+                <a href="batac.html">
+                    <img class="st-icon" src="images/dzrl.png" />
                     <p>DZRL Batac</p>
                 </a>
             </li>
             <li>
-                <a href="pages/baguio.html">
-                    <img class="st-icon" src="/images/dzbs.png" />
+                <a href="baguio.html">
+                    <img class="st-icon" src="images/dzbs.png" />
                     <p>DZBS Baguio</p>
                 </a>
             </li>
             <li>
-                <a href="pages/iriga.html">
-                    <img class="st-icon" src="/images/dzki.png" />
+                <a href="iriga.html">
+                    <img class="st-icon" src="images/dzki.png" />
                     <p>DZKI Iriga</p>
                 </a>
             </li>
             <li>
-                <a href="pages/bacolod.html">
-                    <img class="st-icon" src="/images/dykb.png" />
+                <a href="bacolod.html">
+                    <img class="st-icon" src="images/dykb.png" />
                     <p>DYKB Bacolod</p>
                 </a>
             </li>
             <li>
-                <a href="pages/cebu.html">
-                    <img class="st-icon" src="/images/dykc.png" />
+                <a href="cebu.html">
+                    <img class="st-icon" src="images/dykc.png" />
                     <p>DYKC Cebu</p>
                 </a>
             </li>
             <li>
-                <a href="pages/surigao.html">
-                    <img class="st-icon" src="/images/dxks.png" />
+                <a href="surigao.html">
+                    <img class="st-icon" src="images/dxks.png" />
                     <p>DXKS Surigao</p>
                 </a>
             </li>
             <li>
-                <a href="pages/dipolog.html">
-                    <img class="st-icon" src="/images/dxdx.png" />
+                <a href="dipolog.html">
+                    <img class="st-icon" src="images/dxkd.png" />
                     <p>DXKD Dipolog</p>
                 </a>
             </li>
             <li>
-                <a href="pages/cdo.html">
-                    <img class="st-icon" src="/images/dxko.png" />
+                <a href="cdo.html">
+                    <img class="st-icon" src="images/dxko.png" />
                     <p>DXKO Cagayan de Oro</p>
                 </a>
             </li>
             <li>
-                <a href="pages/davao.html">
-                    <img class="st-icon" src="/images/dxkt.png" />
+                <a href="davao.html">
+                    <img class="st-icon" src="images/dxkt.png" />
                     <p>DXKT Davao</p>
                 </a>
             </li>
             <li>
-                <a href="pages/gensan.html">
-                    <img class="st-icon" src="/images/dxdx.png" />
+                <a href="gensan.html">
+                    <img class="st-icon" src="images/dxdx.png" />
                     <p>DXDX General Santos</p>
                 </a>
             </li>
             <li>
-                <a href="pages/pagadian.html">
-                    <img class="st-icon" src="/images/dxkp.png" />
+                <a href="pagadian.html">
+                    <img class="st-icon" src="images/dxkp.png" />
                     <p>DXKP Pagadian</p>
                 </a>
             </li>
             <li>
-                <a href="pages/zamboanga.html">
-                    <img class="st-icon" src="/images/dxxx.png" />
+                <a href="zamboanga.html">
+                    <img class="st-icon" src="images/dxxx.png" />
                     <p>DXXX Zamboanga</p>
                 </a>
             </li>
