Finalize desktop view

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tune In</title>
+    <title>Tune In - RPN Radio</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script data-ad-client="ca-pub-2042503086093877" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+    <script data-ad-client="ca-pub-5525109159862781" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -115,7 +113,19 @@
 
     </div>
 
-    <div class="other">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- tunein-ad -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5525109159862781"
+         data-ad-slot="1487888016"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
+    <div class="other" style="display: none;">
         <h2>We're also heard on:</h2>
         <div class="listarea">
             <ul class="list others">
