Add page open graph metas

--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Primary Meta Tags -->
     <title>Tune In - RPN Radio</title>
+    <meta name="title" content="Tune In — RPN Radio">
+    <meta name="description"
+        content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tunein.rpnradio.com/">
+    <meta property="og:title" content="Tune In — RPN Radio">
+    <meta property="og:description"
+        content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
+    <meta property="og:image" content="rpnradio-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://tunein.rpnradio.com/">
+    <meta property="twitter:title" content="Tune In — RPN Radio">
+    <meta property="twitter:description"
+        content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
+    <meta property="twitter:image" content="rpnradio-image.png">
+    
     <link rel="stylesheet" href="/css/style.css">
-    <script data-ad-client="ca-pub-5525109159862781" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-5525109159862781" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -38,73 +60,73 @@
     <div class="stations">
         <ul class="list">
             <li>
-                <a href="batac.html">
+                <a href="batac">
                     <img class="st-icon" src="images/dzrl.png" />
                     <p>DZRL Batac</p>
                 </a>
             </li>
             <li>
-                <a href="baguio.html">
+                <a href="baguio">
                     <img class="st-icon" src="images/dzbs.png" />
                     <p>DZBS Baguio</p>
                 </a>
             </li>
             <li>
-                <a href="iriga.html">
+                <a href="iriga">
                     <img class="st-icon" src="images/dzki.png" />
                     <p>DZKI Iriga</p>
                 </a>
             </li>
             <li>
-                <a href="bacolod.html">
+                <a href="bacolod">
                     <img class="st-icon" src="images/dykb.png" />
                     <p>DYKB Bacolod</p>
                 </a>
             </li>
             <li>
-                <a href="cebu.html">
+                <a href="cebu">
                     <img class="st-icon" src="images/dykc.png" />
                     <p>DYKC Cebu</p>
                 </a>
             </li>
             <li>
-                <a href="surigao.html">
+                <a href="surigao">
                     <img class="st-icon" src="images/dxks.png" />
                     <p>DXKS Surigao</p>
                 </a>
             </li>
             <li>
-                <a href="dipolog.html">
+                <a href="dipolog">
                     <img class="st-icon" src="images/dxkd.png" />
                     <p>DXKD Dipolog</p>
                 </a>
             </li>
             <li>
-                <a href="cdo.html">
+                <a href="cdo">
                     <img class="st-icon" src="images/dxko.png" />
                     <p>DXKO Cagayan de Oro</p>
                 </a>
             </li>
             <li>
-                <a href="davao.html">
+                <a href="davao">
                     <img class="st-icon" src="images/dxkt.png" />
                     <p>DXKT Davao</p>
                 </a>
             </li>
             <li>
-                <a href="gensan.html">
+                <a href="gensan">
                     <img class="st-icon" src="images/dxdx.png" />
                     <p>DXDX General Santos</p>
                 </a>
             </li>
             <li>
-                <a href="pagadian.html">
+                <a href="pagadian">
                     <img class="st-icon" src="images/dxkp.png" />
                     <p>DXKP Pagadian</p>
                 </a>
             </li>
             <li>
-                <a href="zamboanga.html">
+                <a href="zamboanga">
                     <img class="st-icon" src="images/dxxx.png" />
                     <p>DXXX Zamboanga</p>
                 </a>
@@ -115,14 +137,10 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- tunein-ad -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5525109159862781"
-         data-ad-slot="1487888016"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525109159862781" data-ad-slot="1487888016"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
+        (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
 
     <div class="other" style="display: none;">
