--- a/davao.html
+++ b/davao.html
@@ -5,7 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="600">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPN Davao Live Audio</title>
+    <!-- Primary Meta Tags -->
+    <title>RPN Davao Live Audio — Tune In | Radio Philippines Network</title>
+    <meta name="title" content="RPN Davao Live Audio — Tune In | Radio Philippines Network">
+    <meta name="description"
+        content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tunein.rpnradio.com/davao">
+    <meta property="og:title" content="RPN Davao Live Audio — Tune In | Radio Philippines Network">
+    <meta property="og:description"
+        content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://tunein.rpnradio.com/davao">
+    <meta property="twitter:title" content="RPN Davao Live Audio — Tune In | Radio Philippines Network">
+    <meta property="twitter:description"
+        content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
+    <meta property="twitter:image" content="">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
     <script data-ad-client="ca-pub-5525109159862781" async
@@ -32,73 +52,73 @@
             <h2>Stations</h2>
             <ul class="list">
                 <li>
-                    <a href="batac.html">
+                    <a href="batac">
                         <img class="st-icon" src="images/dzrl.png" />
                         <p>DZRL Batac</p>
                     </a>
                 </li>
                 <li>
-                    <a href="baguio.html">
+                    <a href="baguio">
                         <img class="st-icon" src="images/dzbs.png" />
                         <p>DZBS Baguio</p>
                     </a>
                 </li>
                 <li>
-                    <a href="iriga.html">
+                    <a href="iriga">
                         <img class="st-icon" src="images/dzki.png" />
                         <p>DZKI Iriga</p>
                     </a>
                 </li>
                 <li>
-                    <a href="bacolod.html">
+                    <a href="bacolod">
                         <img class="st-icon" src="images/dykb.png" />
                         <p>DYKB Bacolod</p>
                     </a>
                 </li>
                 <li>
-                    <a href="cebu.html">
+                    <a href="cebu">
                         <img class="st-icon" src="images/dykc.png" />
                         <p>DYKC Cebu</p>
                     </a>
                 </li>
                 <li>
-                    <a href="surigao.html">
+                    <a href="surigao">
                         <img class="st-icon" src="images/dxks.png" />
                         <p>DXKS Surigao</p>
                     </a>
                 </li>
                 <li>
-                    <a href="dipolog.html">
+                    <a href="dipolog">
                         <img class="st-icon" src="images/dxkd.png" />
                         <p>DXKD Dipolog</p>
                     </a>
                 </li>
                 <li>
-                    <a href="cdo.html">
+                    <a href="cdo">
                         <img class="st-icon" src="images/dxko.png" />
                         <p>DXKO Cagayan de Oro</p>
                     </a>
                 </li>
                 <li>
-                    <a href="davao.html">
+                    <a href="davao">
                         <img class="st-icon" src="images/dxkt.png" />
                         <p>DXKT Davao</p>
                     </a>
                 </li>
                 <li>
-                    <a href="gensan.html">
+                    <a href="gensan">
                         <img class="st-icon" src="images/dxdx.png" />
                         <p>DXDX General Santos</p>
                     </a>
                 </li>
                 <li>
-                    <a href="pagadian.html">
+                    <a href="pagadian">
                         <img class="st-icon" src="images/dxkp.png" />
                         <p>DXKP Pagadian</p>
                     </a>
                 </li>
                 <li>
-                    <a href="zamboanga.html">
+                    <a href="zamboanga">
                         <img class="st-icon" src="images/dxxx.png" />
                         <p>DXXX Zamboanga</p>
                     </a>
@@ -113,7 +133,7 @@
         <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
         <script type="text/javascript">
             MRP.insert({
-                'url': 'http://87.98.130.255:9056/;',
+                'url': 'https://dxkt-rpnradio.radioca.st/stream;',
                 'codec': 'mp3',
                 'volume': 80,
                 'autoplay': true,
