Fix og:image url

--- a/davao.html
+++ b/davao.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="RPN Davao Live Audio — Tune In | Radio Philippines Network">
     <meta property="og:description"
         content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://tunein.rpnradio.com/tunein-ogdavao.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
     <meta property="twitter:title" content="RPN Davao Live Audio — Tune In | Radio Philippines Network">
     <meta property="twitter:description"
         content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://tunein.rpnradio.com/tunein-ogdavao.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
     <script data-ad-client="ca-pub-5525109159862781" async
