Fix og image size

--- a/index.html
+++ b/index.html
@@ -25,27 +25,19 @@
     <meta property="twitter:title" content="Tune In — RPN Radio">
     <meta property="twitter:description"
         content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
-    <meta property="twitter:image" content="rpnradio-image.png">
-    
+    <meta property="twitter:image" content="https://tunein.rpnradio.com/rpnradio-image.png">
+
     <link rel="stylesheet" href="/css/style.css">
     <script data-ad-client="ca-pub-5525109159862781" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x12pages0" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="Tune In">
+    <meta name="application-name" content="Tune In">
+    <meta name="msapplication-TileColor" content="#ef1212">
     <meta name="theme-color" content="#ffffff">
 </head>
 
@@ -54,80 +46,80 @@
 
     <div id="img-container-hidden"></div>
     <div id="title-wrapper">
-        <img src="logo.png" id="head-logo" />
+        <img loading="lazy" src="logo.png" id="head-logo" />
         <h2>Radio</h2>
     </div>
     <div class="stations">
         <ul class="list">
             <li>
                 <a href="batac">
-                    <img class="st-icon" src="images/dzrl.png" />
+                    <img loading="lazy" class="st-icon" src="images/dzrl.png" />
                     <p>DZRL Batac</p>
                 </a>
             </li>
             <li>
                 <a href="baguio">
-                    <img class="st-icon" src="images/dzbs.png" />
+                    <img loading="lazy" class="st-icon" src="images/dzbs.png" />
                     <p>DZBS Baguio</p>
                 </a>
             </li>
             <li>
                 <a href="iriga">
-                    <img class="st-icon" src="images/dzki.png" />
+                    <img loading="lazy" class="st-icon" src="images/dzki.png" />
                     <p>DZKI Iriga</p>
                 </a>
             </li>
             <li>
                 <a href="bacolod">
-                    <img class="st-icon" src="images/dykb.png" />
+                    <img loading="lazy" class="st-icon" src="images/dykb.png" />
                     <p>DYKB Bacolod</p>
                 </a>
             </li>
             <li>
                 <a href="cebu">
-                    <img class="st-icon" src="images/dykc.png" />
+                    <img loading="lazy" class="st-icon" src="images/dykc.png" />
                     <p>DYKC Cebu</p>
                 </a>
             </li>
             <li>
                 <a href="surigao">
-                    <img class="st-icon" src="images/dxks.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxks.png" />
                     <p>DXKS Surigao</p>
                 </a>
             </li>
             <li>
                 <a href="dipolog">
-                    <img class="st-icon" src="images/dxkd.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxkd.png" />
                     <p>DXKD Dipolog</p>
                 </a>
             </li>
             <li>
                 <a href="cdo">
-                    <img class="st-icon" src="images/dxko.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxko.png" />
                     <p>DXKO Cagayan de Oro</p>
                 </a>
             </li>
             <li>
                 <a href="davao">
-                    <img class="st-icon" src="images/dxkt.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxkt.png" />
                     <p>DXKT Davao</p>
                 </a>
             </li>
             <li>
                 <a href="gensan">
-                    <img class="st-icon" src="images/dxdx.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxdx.png" />
                     <p>DXDX General Santos</p>
                 </a>
             </li>
             <li>
                 <a href="pagadian">
-                    <img class="st-icon" src="images/dxkp.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxkp.png" />
                     <p>DXKP Pagadian</p>
                 </a>
             </li>
             <li>
                 <a href="zamboanga">
-                    <img class="st-icon" src="images/dxxx.png" />
+                    <img loading="lazy" class="st-icon" src="images/dxxx.png" />
                     <p>DXXX Zamboanga</p>
                 </a>
             </li>
@@ -143,32 +135,13 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
 
-    <div class="other" style="display: none;">
-        <h2>We're also heard on:</h2>
-        <div class="listarea">
-            <ul class="list others">
-                <li>
-                    <a target="_blank" href="https://zeno.fm/search/?query=rpn">
-                        <img class="st-icon" src="images/zeno-logo.png" />
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="http://radio.garden/listen/rpn-dxxx-am-1008/ytZNEcLH">
-                        <img class="st-icon" src="images/rdogarden-logo.png" />
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank"
-                        href='https://play.google.com/store/apps/details?id=com.rpnradio.radiov1&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                        <p>RPN Radio Android App</p>
-                        <img style="width: 90%;" alt='Get it on Google Play'
-                            src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
-                    </a>
-                </li>
-            </ul>
-        </div>
+    <div id="footer" w3-include-html="footer.html">
     </div>
 
+    <script src="script.js"></script>
+    <script>
+        includeHTML();
+    </script>
 
 </body>
 
