--- a/bacolod.html
+++ b/bacolod.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script data-ad-client="ca-pub-5525109159862781" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- RPN: ca-pub-5525109159862781-->
 </head>
 
 <body>
