--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- <div class="anim-object active" id="box-object-gradient-hor" style="animation: bg-pan-left 8s ease 0s 1 normal both running;"></div> -->
 
     <div id="img-container-hidden"></div>
-    <div id="title-wrapper">
+    <div id="title-wrapper" style="z-index: 9999">
         <img loading="lazy" src="logo.png" id="head-logo" />
         <h2>Radio</h2>
     </div>
