Fix url to be compatible with subfolder

--- a/cdo.html
+++ b/cdo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="600">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
     <title>RPN CdO Live Audio — Tune In | Radio Philippines Network</title>
@@ -26,18 +26,18 @@
     <meta property="twitter:description"
         content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
     <meta property="twitter:image" content="https://tunein.rpnradio.com/tunein-ogcdo.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Tune In">
     <meta name="application-name" content="Tune In">
     <meta name="msapplication-TileColor" content="#ef1212">
     <meta name="theme-color" content="#ffffff">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script data-ad-client="ca-pub-5525109159862781" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
@@ -140,7 +140,7 @@
         </div>
     </div>
 
-    <div class="col"><img loading="lazy" class="scale-with-grid" src="/images/banners/cdo_b.png" alt="">
+    <div class="col"><img loading="lazy" class="scale-with-grid" src="images/banners/cdo_b.png" alt="">
         <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
         <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
         <script type="text/javascript">
@@ -168,17 +168,17 @@
             <ul class="list others">
                 <li>
                     <a target="_blank" href="https://facebook.com/RPNCagayandeOro1368">
-                        <img loading="lazy" class="st-social" src="/images/facebook.png" />
+                        <img loading="lazy" class="st-social" src="images/facebook.png" />
                     </a>
                 </li>
                 <li>
                     <a target="_blank" href="https://twitter.com/RPNCdO1368">
-                        <img loading="lazy" class="st-social" src="/images/twitter.png" />
+                        <img loading="lazy" class="st-social" src="images/twitter.png" />
                     </a>
                 </li>
                 <li>
                     <a target="_blank" href="https://youtube.com/RPNCagayandeOro">
-                        <img loading="lazy" class="st-social" src="/images/youtube.png" />
+                        <img loading="lazy" class="st-social" src="images/youtube.png" />
                     </a>
                 </li>
             </ul>
