--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
     <meta property="twitter:image" content="https://tunein.rpnradio.com/rpnradio-image.png">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script data-ad-client="ca-pub-5525109159862781" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Tune In">
     <meta name="application-name" content="Tune In">
     <meta name="msapplication-TileColor" content="#ef1212">
@@ -49,6 +49,7 @@
         <img loading="lazy" src="logo.png" id="head-logo" />
         <h2>Radio</h2>
     </div>
+
     <div class="stations">
         <ul class="list">
             <li>
@@ -129,6 +130,7 @@
         </ul>
 
     </div>
+
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- tunein-ad -->
