--- a/not_found.html
+++ b/not_found.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,19 +26,20 @@
         content="Tune into RPN radio stations using your smartphone. Just connect to the internet and listen anytime and anywhere you like.">
     <meta property="twitter:image" content="https://tunein.rpnradio.com/rpnradio-image.png">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script data-ad-client="ca-pub-5525109159862781" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Tune In">
     <meta name="application-name" content="Tune In">
     <meta name="msapplication-TileColor" content="#ef1212">
     <meta name="theme-color" content="#ffffff">
 </head>
+
 <body style="overflow: hidden;">
     <div id="title-wrapper" style="cursor: pointer; top: 0" onclick="goToHome()">
         <img loading="lazy" src="logo.png" id="head-logo" />
@@ -48,8 +50,8 @@
         <h2>Oops. We could not find that page.</h2>
     </div>
 
-    <div id="footer" w3-include-html="footer.html" 
-    style="position: absolute; bottom: 0; right: 0; left: 0; margin-bottom: 20px;">
+    <div id="footer" w3-include-html="footer.html"
+        style="position: absolute; bottom: 0; right: 0; left: 0; margin-bottom: 20px;">
     </div>
 
     <script src="script.js"></script>
@@ -60,4 +62,5 @@
         includeHTML();
     </script>
 </body>
+
 </html>
