Update dykc url

--- a/cebu.html
+++ b/cebu.html
@@ -145,7 +145,7 @@
         <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
         <script type="text/javascript">
             MRP.insert({
-                'url': 'https://dykc-iradiophcebu.radioca.st/stream',
+                'url': 'https://dykc-rpnradio.radioca.st/stream',
                 'codec': 'mp3',
                 'volume': 80,
                 'autoplay': true,
