--- a/pagadian.html
+++ b/pagadian.html
@@ -145,7 +145,7 @@
         <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
         <script type="text/javascript">
             MRP.insert({
-                'url': 'https://dxkp_new-rpnradio.radioca.st/stream',
+                'url': 'https://dxkp-rpnradio.radioca.st/stream',
                 'codec': 'mp3',
                 'volume': 80,
                 'autoplay': true,
