Pre-ui/ux update

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
     <meta name="application-name" content="Tune In">
     <meta name="msapplication-TileColor" content="#ef1212">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!-- <div class="anim-object active" id="box-object-gradient-hor" style="animation: bg-pan-left 8s ease 0s 1 normal both running;"></div> -->
-
-    <div id="img-container-hidden"></div>
     <div id="title-wrapper" style="z-index: 9999">
         <img loading="lazy" src="logo.png" id="head-logo" />
         <h2>Radio</h2>
