--- a/download.html
+++ b/download.html
@@ -25,8 +25,6 @@
     <meta property="twitter:image" content="https://tunein.rpnradio.com/rpnradio-image.png">
 
     <link rel="stylesheet" href="css/style-dl.css">
-    <script data-ad-client="ca-pub-5525109159862781" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -38,39 +36,29 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- <div class="anim-object active" id="box-object-gradient-hor" style="animation: bg-pan-left 8s ease 0s 1 normal both running;"></div> -->
-    <header id="title-wrapper" style="z-index: 9999">
-        <img loading="lazy" src="logo.png" id="head-logo" />
-        <h2>Radio</h2>
-    </header>
-
     <main class="tagwrapper">
-        <img id="app-image" class="appimage" src="assets/mobile-screens.png" width="60%" <div class="taglines">
-        <div class="dlwrapper">
-            <a class="appstore" href="https://apps.apple.com/us/app/rpn-radio/id1571699396"><img
-                    src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us"
-                    alt="Download on the App Store" style="border-radius: 13px; width: 164px;"></a>
-            <a class="playstore" href='https://play.google.com/store/apps/details?id=com.rpnradio.radiov1'><img
-                    alt='Get it on Google Play' style="width:200px; margin:-12px;"
-                    src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' /></a>
-            <a class="appgallery" href="https://appgallery.huawei.com/#/app/C103076031">
-                <img alt="Explore it on Huawei App Gallery" style="width: 180px;"
-                    src="assets/huaweigallery-badge.png" /></a>
+        <img id="app-icon" class="applogo" src="assets/appicon-512x.png" height="140px" />
+        <img id="app-image" class="appimage" src="assets/mobile-screens.png" width="60%" />
+        <div class="taglines">
+            <div class="dlwrapper">
+                <a class="appstore" href="https://apps.apple.com/us/app/rpn-radio/id1571699396"><img
+                        src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us"
+                        alt="Download on the App Store" style="border-radius: 13px; width: 164px;"></a>
+                <a class="playstore" href='https://play.google.com/store/apps/details?id=com.rpnradio.radiov1'><img
+                        alt='Get it on Google Play' style="width:200px; margin:-12px;"
+                        src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' /></a>
+                <a class="appgallery" href="https://appgallery.huawei.com/#/app/C103076031">
+                    <img alt="Explore it on Huawei App Gallery" style="width: 180px;"
+                        src="assets/huaweigallery-badge.png" /></a>
+            </div>
         </div>
     </main>
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- tunein-ad -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525109159862781" data-ad-slot="1487888016"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
 
     <div id="footer" w3-include-html="footer.html">
     </div>
