--- a/footer.html
+++ b/footer.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPN Tune In Footer</title>
+<head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>RPN Tune In Footer</title>
 </head>
-
 <body>
-    <p>&copy; 2019-2021 <a href="https://rpnradio.com/" target="_blank">Radio Philippines Network, Inc.</a> and <a
-            href="https://reddavid.me/">Red David.</a>
-    </p>
-    <p>
-        If you have any questions, suggestions or encountered a problem, <a href="mailto:info@rpnradio.com">send us an
-            email.</a>
-    </p>
-</body>
+<p>&copy; 2021 <a href="https://rpnradio.com/" target="_blank">Radio Philippines Network, Inc.</a></p>
 
+<p>If you have any questions, suggestions or encountered a problem, <a href="mailto:info@rpnradio.com">send us an email.</a></p>
+</body>
 </html>
